# Legal-Decision-Automation-telegram-

./: Procfile  README.md  admin_settings.py  app.json  bot_alpha_noToken.py  bot_content_independent.py  bot_data.py  od-telegram-bot.py  pyproject.toml  requirements.txt  settings.py  user_menu.py
locale/: de-default.py  de.py  en-default.py  en.py
settings/: custom_settings.py  settings.py
utils/: admin.py  admin_data.py  admin_utils.py  admin_utils_data.py  get_strings.py  user_menu.py  user_menu_data.py  utils.py
