[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "pythontelegramhclc"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.7"
html2markdown = "^0.1.7"
json-logic = "^0.6.3"
json_logic_qubit = "^0.9.1"
html2text = "^2020.1"
[tool.poetry.dev-dependencies]
